force-app/main/default/objects/Fan_Segment_History__c/fields/Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_Date__c</fullName>
    <description>팬의 Current Segment가 변경된 날짜와 시간을 기록</description>
    <inlineHelpText>팬의 Current Segment가 변경된 날짜와 시간을 기록</inlineHelpText>
    <label>Changed Date</label>
    <type>DateTime</type>
</CustomField>