force-app/main/default/objects/Fan_Segment_History__c/fields/Fan__c.field-meta.xml
<CustomField>
    <fullName>Fan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Current Segment 변경 이력이 기록되는 팬(Person Account)을 참조</description>
    <inlineHelpText>Current Segment 변경 이력이 기록되는 팬(Person Account)을 참조</inlineHelpText>
    <label>Fan</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fan Segment Historys</relationshipLabel>
    <relationshipName>Fan_Segment_Historys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>