force-app/main/default/objects/Fan_Segment_History__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>변경된 시점에 팬에게 적용된 Current Segment(Life Cycle)를 기록</description>
    <inlineHelpText>변경된 시점에 팬에게 적용된 Current Segment(Life Cycle)를 기록</inlineHelpText>
    <label>Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Fan</fullName>
            </value>
            <value>
                <fullName>Active Fan</fullName>
            </value>
            <value>
                <fullName>At-Risk Fan</fullName>
            </value>
            <value>
                <fullName>Dormant Fan</fullName>
            </value>
            <value>
                <fullName>Churned Fan</fullName>
            </value>
            <value>
                <fullName>Unreachable Fan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>